third_party/move/move-compiler-v2/tests/checking/positional_fields/bind_anonymous_field_invalid.exp

Diagnostics:
error: the struct/variant has 1 field but 0 were provided
   ┌─ tests/checking/positional_fields/bind_anonymous_field_invalid.move:12:7
   │
12 │         let S0() = x;
   │             ^^^^

error: the struct/variant has 1 field but 2 were provided
   ┌─ tests/checking/positional_fields/bind_anonymous_field_invalid.move:16:7
   │
16 │         let S0(_x, _y) = x;
   │             ^^^^^^^^^^

error: the struct/variant has 1 field but 2 were provided
   ┌─ tests/checking/positional_fields/bind_anonymous_field_invalid.move:20:14
   │
20 │         let S1(_x, S0(_y, _z)) = x;
   │                    ^^^^^^^^^^

error: the struct/variant has 1 field but 2 were provided
   ┌─ tests/checking/positional_fields/bind_anonymous_field_invalid.move:26:11
   │
26 │             E1::V1(S0(_x, _y)) => {},
   │                    ^^^^^^^^^^

error: the struct/variant has 1 field but 2 were provided
   ┌─ tests/checking/positional_fields/bind_anonymous_field_invalid.move:27:18
   │
27 │             E1::V2(S1(_x, S0(_y, _z))) => {}
   │                           ^^^^^^^^^^
